[package]
name = "parser_gl200"
version = "0.1.0"
authors = ["Murilo Cadanus da Costa <murilocadanus@gmail.com>"]

[dependencies]
rustc-serialize = "0.3.19"
byteorder = "0.3"
env_logger = "0.3.1"
log = "0.3.1"
mio = "0.5"
psio = { git = "https://github.com/murilocadanus/psio.git", branch = "develop"}

[[bin]]
name = "parser_server"
path = "src/main.rs"

[[bin]]
name = "parser_client"
path = "src/client.rs"